--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^0.0.0-experimental-compat.6",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
